@@ -1,6 +1,8 @@
 Noteworthy changes in version 1.0.7
 ------------------------------------------------
 
+ * Detect overflow while parsing OIDs.
+
 
 Noteworthy changes in version 1.0.6 (2009-06-05)
 ------------------------------------------------
